# uv-k5-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  aircopy.c  aircopy.h  app.c  app.h  audio.c  audio.h  battery.c  battery.h  bitmaps.c  bitmaps.h  blob-overlay.S  board.c  board.h  compile-with-docker.bat  compile-with-docker.sh  dcs.c  dcs.h  dp32g030.cfg  dtmf.c  dtmf.h  firmware.ld  firmware.txt  fm.c  fm.h  font.c  font.h  frequencies.c  frequencies.h  functions.c  functions.h  gen-overlay-symbols.sh  gui.c  gui.h  helper.c  (+17 more)
.github/workflows/: c-cpp.yml  main.yaml  main.yml  makefile.yml  release.yaml
app/: action.c  action.h  aircopy.c  aircopy.h  app.c  app.h  dtmf.c  dtmf.h  fm.c  fm.h  generic.c  generic.h  main.c  main.h  menu.c  menu.h  scanner.c  scanner.h  uart.c
bsp/dp32g030/: crc.h  dma.h  flash.h  gpio.h  pmu.h  portcon.h  saradc.h  spi.h  syscon.h  uart.h
driver/: adc.c  adc.h  aes.c  backlight.c  backlight.h  bk1080-regs.h  bk1080.c  bk1080.h  bk4819-regs.h  bk4819.c  bk4819.h  crc.c  eeprom.c  flash.c  flash.h  gpio.h  i2c.c  i2c.h  keyboard.c  keyboard.h  spi.c  st7565.c  st7565.h  system.c  system.h  systick.c  systick.h  uart.c  uart.h
hardware/dp32g030/: pmu.def  saradc.def  syscon.def
helper/: battery.c  boot.c  boot.h
ui/: aircopy.c  aircopy.h  battery.c  battery.h  fmradio.c  helper.c  helper.h  lock.c  main.c  menu.c  menu.h  rssi.c  scanner.c  status.c  ui.c  ui.h  welcome.c
